# MTH205-W20

./: .gitignore  README.md  mth205.py  pyproject.toml  setup.py
data/: 3Ddataset_PCA.csv  F2020_TV_Ratings.csv  Housing_Boston.csv  New_Years_Resolution.csv  Rehnquist-cases.csv  Rehnquist-five-four.csv  SAT_data.csv  UWbcd.csv  altitude-temps.csv  bac.csv  bangladesh.csv  beach.csv  bfi.csv  blood_pressure.csv  boston_housing_data.csv  car_insurance.csv  chapel_hill_police_data.csv  cigarette_data.csv  clustering.csv  clusters_data.csv  college_data.csv  credit-balance.csv  crickets.csv  crime_data.csv  cross-validation.csv  events.csv  fuel_efficiency.csv  heart.csv  hitters.csv  iris.data  letter.csv  noise.csv  ols-example.csv  pca-demo.csv  planets.csv  poly_data.csv  ratings-2020.csv  ratings-2021.csv  rehnquist-agreement.csv  sea_ice.csv  (+6 more)
gv_linalg/: __init__.py  gv_linalg.py
libs/: __init__.py  movies.py  mth205.py  test_mth205.py
mth205/: __init__.py
