[tool.poetry]
name = "gv-linalg"
version = "0.1.0"
description = "Some tools for accessing numpy using Sage-like syntax"
repository = "https://github.com/davidaustinm/MTH205-W20"
authors = ["David Austin <david.austin.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.1"
matplotlib = "^3.8.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



readme = "README.md"
homepage = "https://prefigure.org"
authors = ["David Austin <david.austin.m@gmail.com>"]